--- a/MGSFragaria.framework/Versions/A/Resources/Info.plist
+++ b/MGSFragaria.framework/Versions/A/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>11D2001</string>
+	<string>13F34</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -15,24 +15,24 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>DTCompiler</key>
-	<string></string>
+	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>4E2002</string>
+	<string>6A317</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>11D50a</string>
+	<string>13F26</string>
 	<key>DTSDKName</key>
-	<string>macosx10.7</string>
+	<string>macosx10.9</string>
 	<key>DTXcode</key>
-	<string>0432</string>
+	<string>0600</string>
 	<key>DTXcodeBuild</key>
-	<string>4E2002</string>
+	<string>6A317</string>
 </dict>
 </plist>
