--- a/MGSFragaria.framework/Versions/A/Resources/Syntax Definitions/tcltk.plist
+++ b/MGSFragaria.framework/Versions/A/Resources/Syntax Definitions/tcltk.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>beginCommand</key>
@@ -15,11 +15,11 @@
 	<key>endVariable</key>
 	<string></string>
 	<key>firstString</key>
-	<string>"</string>
+	<string>&quot;</string>
 	<key>secondString</key>
-	<string>'</string>
+	<string>&apos;</string>
 	<key>firstSingleLineComment</key>
-	<string></string>
+	<string>#</string>
 	<key>secondSingleLineComment</key>
 	<string></string>
 	<key>beginFirstMultiLineComment</key>
@@ -467,7 +467,6 @@
 		<string>y</string>
 	</array>
 	<key>autocompleteWords</key>
-	<array>
-	</array>
+	<array/>
 </dict>
 </plist>
